--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-django-import-export
 django
-djangorestframework
-psycopg2-binary
 django-admin-interface
-django-import-export
 django-colorfield
-python-dotenv
+django-cors-headers
+django-debug-toolbar
 django-extensions
+django-import-export
 django-jazzmin
-icecream
-pillow
+djangorestframework
 djangorestframework-simplejwt
-uvicorn
 drf-material
 drf-nested-routers
 drf-spectacular
 drf-spectacular-sidecar
-django-cors-headers
 environs
-django-debug-toolbar
+icecream
+pillow
+psycopg2-binary
+python-dotenv
+uvicorn
+git-filter-repo
