--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
-django-import-export
 django
-djangorestframework
-psycopg2-binary
 django-admin-interface
-django-import-export
 django-colorfield
-python-dotenv
+django-cors-headers
+django-debug-toolbar
 django-extensions
+django-import-export[all]
 django-jazzmin
+djangorestframework
+djangorestframework-simplejwt
+drf-material
+drf-nested-routers
+drf-spectacular
+drf-spectacular-sidecar
+environs
+git-filter-repo
+icecream
+pillow
+psycopg2-binary
+python-dotenv
+uvicorn
