--- a/config/.env
+++ b/config/.env
@@ -4,7 +4,7 @@ DEBUG=True
 JPRQ_URL=dalikuziev
 JPRQ_AUTH_KEY=xL8vjGB9rYZ07lNn8MtXJ8beWAv3rJucxEOQ2ptydk
 NGROK_AUTH_TOKEN=2sLXkCkem7UaFIT1b9T9WplwMdO_6ckdnFpH3eaWqVk4raLLQ
-CSRF_TRUSTED_ORIGINS=http://127.0.0.1,http://localhost,https://platform.jprq.site,https://local.jprq.site,https://dalikuziev.jprq.site
+CSRF_TRUSTED_ORIGINS=http://127.0.0.1,http://localhost,https://platform.jprq.site,https://local.jprq.site,https://dalikuziev.jprq.site,https://quick-fast-sheepdog.ngrok-free.app
 CORS_ALLOWED_ORIGINS=http://127.0.0.1,http://localhost
 EMAIL_HOST_USER=dalikuziev@gmail.com
 EMAIL_HOST_PASSWORD='twyu yyfa ciks xiub'
