--- a/.gitignore
+++ b/.gitignore
@@ -64,10 +64,8 @@ static/
 staticfiles/
 
 # Ignore Django migration files
-*/migrations/*.py
-*/migrations/*.pyc
-!*/migrations/__init__.py
-
+**/migrations/*.py
+**/migrations/*.pyc
 
 # Flask stuff:
 instance/
@@ -168,5 +166,3 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 playground/
-**/migrations/
-!**/migrations/__init__.py
