--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,8 @@ static/
 staticfiles/
 
 # Ignore Django migration files
+!*/migrations/__init__.py
+!**/migrations/__init__.py
 **/migrations/*.py
 **/migrations/*.pyc
 
