--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ djangorestframework
 djangorestframework-simplejwt
 drf-material
 drf-nested-routers
+drf-spectacular
+drf-spectacular-sidecar
 environs
 git-filter-repo
 icecream
